<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.example.flavi.projetoandroid.MainActivity">

    <item android:id="@+id/action_search"
          android:title="@string/acao_pesquisar"
          android:icon="@android:drawable/ic_menu_search"
          app:showAsAction="collapseActionView|ifRoom"/>

    <item android:id="@+id/action_new"
          android:title="@string/acao_novo"
          android:icon="@android:drawable/ic_menu_add"
          app:showAsAction="ifRoom|withText"/>

    <item android:id="@+id/action_info"
          android:icon="@android:drawable/ic_menu_info_details"
          android:title="@string/acao_info"
          app:showAsAction="never"/>

</menu>